--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,3 +21,12 @@ jobs:
     - name: Run tests
       run: |
         npm run test -- --watch=false --browsers=ChromeHeadless
+
+    - name: 📂 Sync files
+      uses: SamKirkland/FTP-Deploy-Action@4.3.1
+      with:
+        server: ${{ secrets.FTP_HOST }}
+        username: ${{ secrets.FTP_USER }}
+        password: ${{ secrets.FTP_PASSWORD }}
+        local-dir: dist/join/
+        server-dir: ${{ secrets.FTP_UPLOAD }}
